--- a/package.json
+++ b/package.json
@@ -1,17 +1,5 @@
 {
-  "name": "wfd-sunrise-path",
-  "version": "1.0.0",
   "description": "Recovery Compass WFD Sunrise Path",
-  "scripts": {
-    "test": "jest",
-    "test:coverage": "jest --coverage",
-    "lint:markdown": "markdownlint '**/*.md' --ignore node_modules",
-    "fix:markdown": "markdownlint '**/*.md' --fix --ignore node_modules",
-    "spell:check": "cspell '**/*.md' --no-progress",
-    "fix:all": "npm run fix:markdown && npm run spell:check",
-    "fix:errors": "node scripts/auto_fix_all_errors.js",
-    "pre-commit": "node scripts/auto_fix_all_errors.js && git add -A"
-  },
   "devDependencies": {
     "@testing-library/jest-dom": "^6.0.0",
     "cspell": "^9.2.0",
@@ -19,5 +7,17 @@
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.7.0",
     "markdownlint-cli": "^0.45.0"
-  }
+  },
+  "name": "wfd-sunrise-path",
+  "scripts": {
+    "fix:markdown": "markdownlint '**/*.md' --fix --ignore node_modules",
+    "lint:all": "npm run lint:check && npm run lint:yaml",
+    "lint:check": "npm run lint:markdown && npm run spell:check",
+    "lint:markdown": "markdownlint '**/*.md' --ignore node_modules",
+    "lint:yaml": "yamllint '**/*.yml' '**/*.yaml' --config-file .yamllint",
+    "spell:check": "cspell '**/*.md' --no-progress",
+    "test": "jest",
+    "test:coverage": "jest --coverage"
+  },
+  "version": "1.0.0"
 }
