--- a/package.json
+++ b/package.json
@@ -2,6 +2,8 @@
   "description": "Recovery Compass WFD Sunrise Path",
   "devDependencies": {
     "@testing-library/jest-dom": "^6.0.0",
+    "@types/jest": "^30.0.0",
+    "@types/node": "^24.1.0",
     "cspell": "^9.2.0",
     "cspell-dict-npm": "^1.1.8",
     "jest": "^29.0.0",
