--- a/package.json
+++ b/package.json
@@ -1,14 +1,19 @@
 {
   "description": "Recovery Compass WFD Sunrise Path",
   "devDependencies": {
+    "@babel/preset-env": "^7.20.0",
+    "@babel/preset-react": "^7.18.0",
     "@testing-library/jest-dom": "^6.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^24.1.0",
+    "babel-jest": "^29.5.0",
     "cspell": "^9.2.0",
     "cspell-dict-npm": "^1.1.8",
     "jest": "^29.0.0",
     "jest-environment-jsdom": "^29.7.0",
-    "markdownlint-cli": "^0.45.0"
+    "markdownlint-cli": "^0.45.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.0.0"
   },
   "name": "wfd-sunrise-path",
   "scripts": {
@@ -19,7 +24,12 @@
     "eval": "openai tools evals ./alignment_tests --model gpt-4o",
     "test:alignment": "npm run eval && echo '✅ Alignment passed'",
     "snapshot:objectives": "node scripts/snapshot_objectives.js",
-    "scan:gems": "python scripts/scan_hidden_gems.py"
+    "scan:gems": "python scripts/scan_hidden_gems.py",
+    "fix:security": "node scripts/fix-insecure-patterns.js",
+    "fix:typescript": "tsc --noEmit && eslint --fix 'src/**/*.ts' || true",
+    "fix:all": "npm run fix:security && npm run fix:typescript && npm run lint:fix || true",
+    "lint:fix": "markdownlint '**/*.md' --fix --ignore node_modules --ignore coverage",
+    "pre-push": "npm run fix:all && npm test"
   },
   "version": "1.0.0"
 }
