--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
     "spell": "cspell \"**/*\" --no-progress",
     "check": "npm run lint && npm run spell",
     "eval": "openai tools evals ./alignment_tests --model gpt-4o",
-    "test:alignment": "npm run eval && echo '✅ Alignment passed'",
+    "test:alignment": "npm run eval && echo '\u2705 Alignment passed'",
     "snapshot:objectives": "node scripts/snapshot_objectives.js",
     "scan:gems": "python scripts/scan_hidden_gems.py",
     "fix:security": "node scripts/fix-insecure-patterns.js",
@@ -35,5 +35,48 @@
   "dependencies": {
     "dotenv": "^17.2.1",
     "puppeteer": "^24.15.0"
+  },
+  "overrides": {
+    "@babel/traverse": "latest",
+    "form-data": ">=4.0.0",
+    "webpack": ">=5.89.0",
+    "mongoose": ">=7.5.0",
+    "@svgr/plugin-svgo": "latest",
+    "@svgr/webpack": "latest",
+    "body-parser": ">=1.20.2",
+    "braces": "latest",
+    "cross-spawn": "latest",
+    "css-select": "latest",
+    "express": ">=4.18.2",
+    "http-proxy-middleware": "latest",
+    "nth-check": "latest",
+    "path-to-regexp": ">=6.2.1",
+    "react-scripts": "latest",
+    "rollup": "latest",
+    "semver": ">=7.5.2",
+    "svgo": "latest",
+    "webpack-dev-middleware": "latest",
+    "ws": "latest",
+    "ip": "latest",
+    "socks": "latest",
+    "@babel/helpers": "latest",
+    "@babel/runtime": "latest",
+    "@pmmmwh/react-refresh-webpack-plugin": "latest",
+    "ejs": "latest",
+    "follow-redirects": "latest",
+    "micromatch": "latest",
+    "nanoid": "latest",
+    "postcss": "latest",
+    "resolve-url-loader": "latest",
+    "serialize-javascript": "latest",
+    "tough-cookie": ">=4.1.3",
+    "webpack-dev-server": "latest",
+    "word-wrap": ">=1.2.5",
+    "brace-expansion": "latest",
+    "compression": "latest",
+    "cookie": "latest",
+    "on-headers": "latest",
+    "send": "latest",
+    "serve-static": "latest"
   }
 }
