--- a/welcome-to-docker/package.json
+++ b/welcome-to-docker/package.json
@@ -32,5 +32,50 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "overrides": {
+    "form-data": ">=4.0.0",
+    "react-scripts": {
+      "form-data": ">=4.0.0"
+    },
+    "@babel/traverse": "latest",
+    "webpack": ">=5.89.0",
+    "mongoose": ">=7.5.0",
+    "@svgr/plugin-svgo": "latest",
+    "@svgr/webpack": "latest",
+    "body-parser": ">=1.20.2",
+    "braces": "latest",
+    "cross-spawn": "latest",
+    "css-select": "latest",
+    "express": ">=4.18.2",
+    "http-proxy-middleware": "latest",
+    "nth-check": "latest",
+    "path-to-regexp": ">=6.2.1",
+    "rollup": "latest",
+    "semver": ">=7.5.2",
+    "svgo": "latest",
+    "webpack-dev-middleware": "latest",
+    "ws": "latest",
+    "ip": "latest",
+    "socks": "latest",
+    "@babel/helpers": "latest",
+    "@babel/runtime": "latest",
+    "@pmmmwh/react-refresh-webpack-plugin": "latest",
+    "ejs": "latest",
+    "follow-redirects": "latest",
+    "micromatch": "latest",
+    "nanoid": "latest",
+    "postcss": "latest",
+    "resolve-url-loader": "latest",
+    "serialize-javascript": "latest",
+    "tough-cookie": ">=4.1.3",
+    "webpack-dev-server": "latest",
+    "word-wrap": ">=1.2.5",
+    "brace-expansion": "latest",
+    "compression": "latest",
+    "cookie": "latest",
+    "on-headers": "latest",
+    "send": "latest",
+    "serve-static": "latest"
   }
 }
