Fix: grant write perms to GITHUB_TOKEN (#1)
* feat(cia): implement Phase 2 Day 1 - Integration Registry foundation

- Add registry.schema.json with comprehensive component metadata
- Create ci-registry.ts CLI tool for manifest management
- Implement pre-commit hook for manifest validation
- Add sample mcp-dashboard.yaml manifest
- Document Day 1 completion status

Supports: scan, validate, generate commands
Enables: automatic component discovery and validation

* feat(cia): implement Phase 2 Day 2 - Observability & Security foundation

- Extend schema with metrics_port for Prometheus port allocation
- Add doc command for auto-generating component documentation
- Add exporters command for Prometheus exporter generation
- Create ASVS L2 Semgrep rules for security scanning
- Add security-scan.yml workflow with SARIF/HTML reports
- Document Day 2 completion with 60% observability, 40% security progress

Enables: automated docs, metrics exporters, security baseline

* fix: upgrade python-multipart to >=0.0.18 to address Content-Type Header ReDoS vulnerability (GHSA-2jv5-9r88-3w3p, CVE-2024-24762)

* fix: upgrade requests to >=2.32.4 to address .netrc credentials leak vulnerability

* fix: upgrade dependencies to address security vulnerabilities

Updated packages in app:
- pydantic: 2.5.0 → pydantic>=2.7.4

Addresses:
- Security and compatibility updates

* feat: implement security-first orchestration pipeline

- Add comprehensive security orchestrator for vulnerability detection
- Create automated fix patterns for common security issues
- Implement pre-commit hooks for security validation
- Add GitHub Actions workflow for continuous security scanning
- Enable weekly automated security updates via PRs

Security features:
- Scans Python and npm dependencies
- Detects hardcoded secrets and insecure patterns
- Auto-fixes common vulnerabilities
- Creates atomic security commits
- Generates security reports

This establishes a self-healing security infrastructure that prevents

--- a/package.json
+++ b/package.json
@@ -32,6 +32,13 @@
     "fix:all": "npm run fix:security && npm run fix:typescript && npm run lint:fix || true",
     "lint:fix": "markdownlint '**/*.md' --fix --ignore node_modules --ignore coverage",
     "pre-push": "npm run fix:all && npm test",
+    "services:start": "./scripts/service-manager.sh start",
+    "services:stop": "./scripts/service-manager.sh stop",
+    "services:status": "./scripts/service-manager.sh status",
+    "services:health": "./scripts/service-manager.sh health-check",
+    "services:chaos": "./scripts/kill-random-service.sh",
+    "security:scan": "python3 scripts/security/security_orchestrator.py --scan-only",
+    "security:fix": "python3 scripts/security/security_orchestrator.py --fix-all",
     "build": "./build-mobile.sh",
     "cap:sync": "npx cap sync",
     "cap:add:ios": "npx cap add ios",
